fix(VGrid): fix broken style and handle multiple layout usecase

--- a/packages/vuetify/src/components/VGrid/_mixins.sass
+++ b/packages/vuetify/src/components/VGrid/_mixins.sass
@@ -7,4 +7,10 @@
     margin: -($gutter / 2)
 
   > .layout:not(:only-child)
-    margin: auto -($gutter / 2)
+    margin: auto #{-($gutter / 2)}
+
+    &:first-child
+      margin-top: -($gutter / 2)
+
+    &:last-child
+      margin-bottom: -($gutter / 2)
